# Tpp-Cpp-5

./: B3133  CMakeLists.txt  Conception_B3133.tex  UML - Conception  UML - Conception.dia  main.cpp  makefile
benchmark/: commands  commands2  loadLotOfCommand.txt  lotOfCommand.txt
doc/: CDC_B3133.tex  Conception_B3133.tex  Perfs_B3133.tex  UML - Conception.dia  UMLFinal.dia
saves/: t1  tmpClearSave
src/: Action.cpp  Action.h  Draw.cpp  Draw.h  Intersection.cpp  Intersection.h  MultiObject.cpp  MultiObject.h  Object.cpp  Object.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Union.cpp  Union.h  main.cpp
tests/: mktest.sh  results.csv
tests/TestClear/: description  std.in  std.out  temp.txt
tests/TestClear/saves/: tmpClearSave
tests/TestExit/: description  run  std.out
tests/TestHit/: description  std.in  std.out
tests/TestMultiobjets/: description  std.in  std.out  temp.txt
tests/TestPolygon/: description  std.in  std.out  temp.txt
tests/TestRectangle/: description  std.in  std.out  temp.txt
tests/TestRedo/: std.in  std.out
tests/TestSaveLoad/: description  std.in  std.out  temp.txt
tests/TestSaveLoad/saves/: saveForTest  tmpClearSave  ²-"r01
tests/TestSegment/: description  std.out  temp.txt
tests/TestUndo/: description  std.out  temp.txt
